// Copyright 2021 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


message MonitoringAlphaService {
  string name = 1;
  string display_name = 2;
  MonitoringAlphaServiceCustom custom = 3;
  MonitoringAlphaServiceAppEngine app_engine = 4;
  MonitoringAlphaServiceCloudEndpoints cloud_endpoints = 5;
  MonitoringAlphaServiceClusterIstio cluster_istio = 6;
  MonitoringAlphaServiceMeshIstio mesh_istio = 7;
  MonitoringAlphaServiceIstioCanonicalService istio_canonical_service = 8;
  MonitoringAlphaServiceCloudRun cloud_run = 9;
  MonitoringAlphaServiceGkeNamespace gke_namespace = 10;
  MonitoringAlphaServiceGkeWorkload gke_workload = 11;
  MonitoringAlphaServiceGkeService gke_service = 12;
  MonitoringAlphaServiceTelemetry telemetry = 13;
  map<string, string> user_labels = 14;
  bool deleted = 15;
  string project = 16;
}

message MonitoringAlphaServiceCustom {
}

message MonitoringAlphaServiceAppEngine {
  string module_id = 1;
}

message MonitoringAlphaServiceCloudEndpoints {
  string service = 1;
}

message MonitoringAlphaServiceClusterIstio {
  string location = 1;
  string cluster_name = 2;
  string service_namespace = 3;
  string service_name = 4;
}

message MonitoringAlphaServiceMeshIstio {
  string mesh_uid = 1;
  string service_namespace = 2;
  string service_name = 3;
}

message MonitoringAlphaServiceIstioCanonicalService {
  string mesh_uid = 1;
  string canonical_service_namespace = 2;
  string canonical_service = 3;
}

message MonitoringAlphaServiceCloudRun {
  string service_name = 1;
  string location = 2;
}

message MonitoringAlphaServiceGkeNamespace {
  string project_id = 1;
  string location = 2;
  string cluster_name = 3;
  string namespace_name = 4;
}

message MonitoringAlphaServiceGkeWorkload {
  string project_id = 1;
  string location = 2;
  string cluster_name = 3;
  string namespace_name = 4;
  string top_level_controller_type = 5;
  string top_level_controller_name = 6;
}

message MonitoringAlphaServiceGkeService {
  string project_id = 1;
  string location = 2;
  string cluster_name = 3;
  string namespace_name = 4;
  string service_name = 5;
}

message MonitoringAlphaServiceTelemetry {
  string resource_name = 1;
}

message ApplyMonitoringAlphaServiceRequest {
  MonitoringAlphaService resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteMonitoringAlphaServiceRequest {
  string service_account_file = 1;
  MonitoringAlphaService resource = 2;
}

message ListMonitoringAlphaServiceRequest {
  string service_account_file = 1;
  string Project = 2;
}

message ListMonitoringAlphaServiceResponse {
  repeated MonitoringAlphaService items = 1;
}

service MonitoringAlphaServiceService {
  rpc ApplyMonitoringAlphaService(ApplyMonitoringAlphaServiceRequest) returns (MonitoringAlphaService);
  rpc DeleteMonitoringAlphaService(DeleteMonitoringAlphaServiceRequest) returns (google.protobuf.Empty);
  rpc ListMonitoringAlphaService(ListMonitoringAlphaServiceRequest) returns (ListMonitoringAlphaServiceResponse);
}
